<resources>
    <string name="app_name">Spotted</string>
    <string name="password">Password</string>
    <string name="email_username">Email (username)</string>
    <string name="signup_text">You can sign up or go home!</string>
    <string name="login_button_text">Login!</string>

    <string name="menu_friendlist_text">Manage Friends</string>
    <string name="menu_map_text">Watch Map</string>
    <string name="menu_configure_profile_text">Configure Profile</string>

    <string name="friend_search_button_text">Add Friend</string>

    <!--Login fields -->
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <!--Signup fields -->
    <string name="signup_name">Username!</string>
    <string name="signup_email">E-mail!</string>
    <string name="signup_password">Password</string>
    <string name="signup_btn">Signup!</string>
    <!--Hints-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail</string>

    <color name="backgroundcolor">#AAAAAA</color>

    <!-- Tutorial strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_1_1">Add your festivals by entering the ticket number and load the festival map</string>
    <string name="tutorial_2_1">Add your friends for each festival to be able to find them</string>
    <string name="tutorial_3_1">Hey party people! In order to find your friends and let them find you, we will need you to keep your Wi-fi and GPS active during the festival.</string>
    <string name="tutorial_1_2">Add your festival</string>
    <string name="tutorial_2_2">Add your pack</string>
    <string name="tutorial_3_2">Music unites us all</string>

</resources>